Fixed the alignment of the grid container items

--- a/styles/sass/partials/_featured.scss
+++ b/styles/sass/partials/_featured.scss
@@ -67,7 +67,7 @@
       &__container{
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-start;
             padding: 15px;
             overflow: hidden;
     
