--- a/styles/sass/partials/_instagram.scss
+++ b/styles/sass/partials/_instagram.scss
@@ -18,6 +18,7 @@
     max-width: 100%;
     gap: 20px;
     -webkit-gap: 20px;
+    -webkit-column-gap: 20px;
     -moz-gap: 20px;
     padding-top: 3rem;
 
